# websports

./: .gitignore  .replit  admin.py  app.py  config.py  forms.py  main.py  models.py  pyproject.toml  routes.py  utils.py
attached_assets/: Pasted-Ch-o-b-n-c-m-n-v-c-g-ng-s-a-ch-a-v-th-m-n-i-dung-m-u-T-i-ki-m-tra-trang-ch-Tuy-nhi--1749189152478.txt
migrations/versions/: 122c722cf1a8_add_source_url_to_article_model.py  e30262094f9d_add_image_url_to_advertisement_and_.py
templates/: admin_dashboard.html  article_detail.html  base.html  category.html  create_article.html  edit_article.html  index.html  login.html  profile.html  register.html  search.html
templates/admin/: advertisement_form.html  advertisements.html  article_form.html  articles.html  categories.html  category_form.html  comments.html  dashboard.html  users.html
templates/errors/: 404.html  500.html
